blog-posts naam veranders

--- a/blog-posts/opgroeiing.html
+++ b/blog-posts/opgroeiing.html
@@ -3,8 +3,7 @@
 
 <head>
   <title>Pagina over hoe ik ben opgegroeid met technologie</title>
-  <meta name="description"
-    content="Dit is een blogpost over mijn opgroeiing met computers en andere technologie.">
+  <meta name="description" content="Dit is een blogpost over mijn opgroeiing met computers en andere technologie.">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../assets/styles.css">
@@ -12,8 +11,8 @@
 </head>
 
 <body>
-  <main>
-     <!-- De Navigation bar -->
+  <header>
+    <!-- De Navigation bar -->
     <nav>
       <div class="nav-content">
         <ul class="navigation-bar">
@@ -23,25 +22,32 @@
           <li><a class="navigation-links" id="blog-post" href="../blog.html"><strong>Terug naar Blog</strong></a></li>
           <li><a class="navigation-links" href="../faq.html"><strong>FAQ</strong></a></li>
         </ul>
+        <!-- HZ Logo met link naar de HZ-website -->
         <div class="hzlogo">
           <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="../Fotos en pdf/hz-logo.png"
               alt="hz-logo"></a>
         </div>
       </div>
     </nav>
+  </header>
+  <!-- Main page content -->
+  <main>
     <h1>Opgroeien met technologie</h1>
-    <p class="blog-text">Waarom ICT? Al sinds dat ik klein was had ik een interesse voor computers. Ik speelde spelletjes op websites en gauw werd ik geïnteresseerd hoe deze websites nou eigenlijk werken. Sinds dien heb ik altijd al een interesse gehad in technologie. Ik heb toen ik 15 jaar was, mijn eerste computer gebouwd met behulp van een paar vrienden. 
+    <p class="blog-text">Waarom ICT? Al sinds dat ik klein was had ik een interesse voor computers. Ik speelde
+      spelletjes op websites en gauw werd ik geïnteresseerd hoe deze websites nou eigenlijk werken. Sinds dien heb ik
+      altijd al een interesse gehad in technologie. Ik heb toen ik 15 jaar was, mijn eerste computer gebouwd met behulp
+      van een paar vrienden.
       Hierdoor bleef mijn interesse steeds maar stijgen. Om deze reden heb ik er voor gekozen om ICT te studeren.</p>
     <!-- 2 plaatjes onderaan -->
-      <div class="blog-foto-container">
-      <img class="blog-foto" src="../Fotos en pdf/Technologie foto1.avif">
-      <img class="blog-foto" src="../Fotos en pdf/technologie foto2.avif">
+    <div class="blog-foto-container">
+      <img class="blog-foto" src="../Fotos en pdf/Technologie foto1.avif" alt="Foto technologie moederboord">
+      <img class="blog-foto" src="../Fotos en pdf/technologie foto2.avif" alt="Foto world wide web">
     </div>
   </main>
 </body>
 
 <footer>
-    <!-- Aside menu -->
+  <!-- Aside menu -->
   <div class="footer-container">
     <ul class="footer-ul">
       <li class="footer-text"><a class="footer-links" target="_blank"
