--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@
 </head>
 
 <body id="faq-body">
-  <main>
+  <header>
     <!-- De Navigation bar -->
     <nav>
       <div class="nav-content">
@@ -22,11 +22,15 @@
           <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
           <li><a class="navigation-links" id="faq" href="faq.html"><strong>FAQ</strong></a></li>
         </ul>
+        <!-- HZ Logo met link naar de HZ-website -->
         <div class="hzlogo">
           <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
         </div>
       </div>
     </nav>
+  </header>
+  <!-- Main page content -->
+  <main>
     <h1>Veelgestelde vragen</h1>
     <div class="faq-container">
       <details>
