--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       </div>
     </nav>
   </header>
-
   <main>
     <h1>Welkom op mijn website!</h1>
     <h3 class="kopje">Waarom heb ik gekozen voor ICT? </h3>
@@ -48,8 +47,8 @@
       vertrouwen in omdat er veel richtingen en werkmogelijkheden zijn in de ICT.</p>
     <!-- 2 plaatjes onderaan -->
     <div class="blog-foto-container">
-      <img class="blog-foto" src="Fotos en pdf/muis.jpg">
-      <img class="blog-foto" src="Fotos en pdf/keyboard.jpg">
+      <img class="blog-foto" src="Fotos en pdf/muis.jpg" alt="Foto van mijn eerste gaming-muis">
+      <img class="blog-foto" src="Fotos en pdf/keyboard.jpg" alt="foto van mijn eerste gaming-keyboard">
     </div>
   </main>
 </body>
