fotos-en-pdf gefixt

--- a/blog-posts/opgroeiing.html
+++ b/blog-posts/opgroeiing.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../assets/styles.css">
-  <link rel="icon" type="image/x-icon" href="../Fotos en pdf/vuurwerk.svg">
+  <link rel="icon" type="image/x-icon" href="../fotos-en-pdf/vuurwerk.svg">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         </ul>
         <!-- HZ Logo met link naar de HZ-website -->
         <div class="hzlogo">
-          <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="../Fotos en pdf/hz-logo.png"
+          <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="fotos-en-pdf/hz-logo.png"
               alt="hz-logo"></a>
         </div>
       </div>
@@ -40,8 +40,8 @@
       Hierdoor bleef mijn interesse steeds maar stijgen. Om deze reden heb ik er voor gekozen om ICT te studeren.</p>
     <!-- 2 plaatjes onderaan -->
     <div class="blog-foto-container">
-      <img class="blog-foto" src="../Fotos en pdf/Technologie foto1.avif" alt="Foto technologie moederboord">
-      <img class="blog-foto" src="../Fotos en pdf/technologie foto2.avif" alt="Foto world wide web">
+      <img class="blog-foto" src="../fotos-en-pdf/Technologie foto1.avif" alt="Foto technologie moederboord">
+      <img class="blog-foto" src="../fotos-en-pdf/technologie foto2.avif" alt="Foto world wide web">
     </div>
   </main>
 </body>
@@ -53,7 +53,7 @@
       <li class="footer-text"><a class="footer-links" target="_blank"
           href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
           and Examination Regulations</a></li>
-      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation
+      <li class="footer-text"><a class="footer-links" target="_blank" href="fotos-en-pdf/all courses.pdf">Implementation
           Regulations
           HBO-ICT</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
