--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/styles.css">
-  <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
+  <link rel="icon" type="image/x-icon" href="fotos-en-pdfvuurwerk.svg">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         </ul>
         <!-- HZ Logo met link naar de HZ-website -->
         <div class="hzlogo">
-          <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
+          <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="fotos-en-pdf/hz-logo.png" alt="hz-logo"></a>
         </div>
       </div>
     </nav>
@@ -37,7 +37,7 @@
       websites en gauw werd ik geïnteresseerd hoe deze websites nou eigenlijk werken. Sinds dien heb ik altijd al een
       interesse
       gehad in technologie. Ik heb toen ik 15 jaar was, mijn eerste computer gebouwd met behulp van een paar vrienden.
-      Klik <a class="index-links" href="Fotos en pdf/eerste-setup.jpg" target="_blank">hier</a> voor een foto van mijn
+      Klik <a class="index-links" href="fotos-en-pdf/eerste-setup.jpg" target="_blank">hier</a> voor een foto van mijn
       eerste gaming setup.
       Hierdoor bleef mijn interesse steeds maar stijgen. Om deze reden heb ik er voor gekozen om ICT te studeren.</p>
     <hr class="styled-hr">
@@ -47,8 +47,8 @@
       vertrouwen in omdat er veel richtingen en werkmogelijkheden zijn in de ICT.</p>
     <!-- 2 plaatjes onderaan -->
     <div class="blog-foto-container">
-      <img class="blog-foto" src="Fotos en pdf/muis.jpg" alt="Foto van mijn eerste gaming-muis">
-      <img class="blog-foto" src="Fotos en pdf/keyboard.jpg" alt="foto van mijn eerste gaming-keyboard">
+      <img class="blog-foto" src="fotos-en-pdf/muis.jpg" alt="Foto van mijn eerste gaming-muis">
+      <img class="blog-foto" src="fotos-en-pdf/keyboard.jpg" alt="foto van mijn eerste gaming-keyboard">
     </div>
   </main>
 </body>
@@ -59,7 +59,7 @@
       <li class="footer-text"><a class="footer-links" target="_blank"
           href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
           and Examination Regulations</a></li>
-      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation
+      <li class="footer-text"><a class="footer-links" target="_blank" href="fotos-en-pdf/all courses.pdf">Implementation
           F Regulations
           HBO-ICT</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
