--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
   <title>Mijn profiel</title>
   <meta name="description" content="Op mijn profiel vertel ik over mezelf.">
   <link rel="stylesheet" href="assets/styles.css">
-  <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
+  <link rel="icon" type="image/x-icon" href="fotos-en-pdf/vuurwerk.svg">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         </ul>
         <!-- HZ Logo met link naar de HZ-website -->
         <div class="hzlogo">
-          <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
+          <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="fotos-en-pdf/hz-logo.png" alt="hz-logo"></a>
         </div>
       </div>
     </nav>
@@ -57,8 +57,8 @@
     </article>
     <!-- 2 plaatjes onderaan -->
     <div class="blog-foto-container">
-      <img class="blog-foto" src="Fotos en pdf/fotokat.jpg" alt="Foto van mijn kat in de tuin">
-      <img class="blog-foto" src="Fotos en pdf/fotokat2.jpg" alt="Foto van mijn kat binnen">
+      <img class="blog-foto" src="fotos-en-pdf/fotokat.jpg" alt="Foto van mijn kat in de tuin">
+      <img class="blog-foto" src="fotos-en-pdf/fotokat2.jpg" alt="Foto van mijn kat binnen">
     </div>
   </main>
 </body>
@@ -71,7 +71,7 @@
       <li class="footer-text"><a class="footer-links" target="_blank"
           href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
           and Examination Regulations</a></li>
-      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation
+      <li class="footer-text"><a class="footer-links" target="_blank" href="fotos-en-pdf/all courses.pdf">Implementation
           Regulations HBO-ICT</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a>
       </li>
