--- a/blog-posts/AI-ICT.html
+++ b/blog-posts/AI-ICT.html
@@ -61,7 +61,8 @@
       <li class="footer-text"><a class="footer-links" target="_blank"
           href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
           and Examination Regulations</a></li>
-      <li class="footer-text"><a class="footer-links" target="_blank" href="fotos-en-pdf/all courses.pdf">Implementation
+      <li class="footer-text"><a class="footer-links" target="_blank"
+          href="../fotos-en-pdf/all courses.pdf">Implementation
           Regulations
           HBO-ICT</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
