--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
       interesse
       gehad in technologie. Ik heb toen ik 15 jaar was, mijn eerste computer gebouwd met behulp van een paar vrienden.
       Klik <a class="index-links" href="fotos-en-pdf/eerste-setup.jpg" target="_blank">hier</a> voor een foto van mijn
-      eerste gaming setup.
-      Hierdoor bleef mijn interesse steeds maar stijgen. Om deze reden heb ik er voor gekozen om ICT te studeren.</p>
+      eerste gaming setup. Hierdoor bleef mijn interesse steeds maar stijgen. Om deze reden heb ik er voor gekozen om
+      ICT te studeren. Klik <a class="index-links" href="blog-posts/opgroeiing.html">hier</a> voor meer over mijn
+      motivatie.</p>
     <hr class="styled-hr">
     <h3 class="kopje">Wat beeld ik me in voor de toekomst?</h3>
     <p class="index-text">Na dat ik deze studie heb afgerond hoop ik een software engineer te worden. Ik hoop voor
@@ -70,4 +71,5 @@
     </ul>
   </div>
 </footer>
+
 </html>
