een na laatste push

--- a/index.html
+++ b/index.html
@@ -43,9 +43,16 @@
       motivatie.</p>
     <hr class="styled-hr">
     <h3 class="kopje">Wat beeld ik me in voor de toekomst?</h3>
-    <p class="index-text">Na dat ik deze studie heb afgerond hoop ik een software engineer te worden. Ik hoop voor
-      goed bedrijf in een leuk team te werken aan nieuwe websites, telefoon apps of andere applicaties. Ik heb er veel
-      vertrouwen in omdat er veel richtingen en werkmogelijkheden zijn in de ICT.</p>
+    <p class="index-text">Na dat ik deze studie heb afgerond hoop ik een goede baan in de ICT te krijgen. Ik hoop dat ik
+      in een goed bedrijf en in een leuk team te werken aan nieuwe websites, telefoon apps of andere applicaties. Ik heb er veel
+      vertrouwen in omdat er veel richtingen en werkmogelijkheden zijn in de ICT. Ik zou bijvoorbeeld willen werken als:
+    <ul>
+      <li class="banen">Software Developer.</li>
+      <li class="banen">Front-end Developer.</li>
+      <li class="banen">Systeembeheerder.</li>
+      <li class="banen">Applicatiebeheerder.</li>
+    </ul>
+    </p>
     <!-- 2 plaatjes onderaan -->
     <div class="blog-foto-container">
       <img class="blog-foto" src="fotos-en-pdf/muis.jpg" alt="Foto van mijn eerste gaming-muis">
