--- a/blog-posts/opgroeiing.html
+++ b/blog-posts/opgroeiing.html
@@ -35,8 +35,12 @@
     <p class="blog-text">Waarom ICT? Al sinds dat ik klein was had ik een interesse voor computers. Ik speelde
       spelletjes op websites en gauw werd ik geïnteresseerd hoe deze websites nou eigenlijk werken. Sinds dien heb ik
       altijd al een interesse gehad in technologie. Ik heb toen ik 15 jaar was, mijn eerste computer gebouwd met behulp
-      van een paar vrienden.
-      Hierdoor bleef mijn interesse steeds maar stijgen. Om deze reden heb ik er voor gekozen om ICT te studeren.</p>
+      van een paar vrienden. Deze computer had een GTX 1050 Ti videokaart en een Ryzen 3 1200 processor. Dit was geen
+      hele snelle computer, maar ik heb er
+      veel leuke ervaring mee opgedaan.
+      Hierdoor bleef mijn interesse steeds maar stijgen. Ik volg ook vaak het nieuws als het gaat om ICT, bijvoorbeeld
+      wanneer AI verder wordt ontwikkeld. Daarnaast kijk ik ook soms programmeer-videos op YouTube. Om deze redenen heb
+      ik er voor gekozen om ICT te studeren.</p>
     <!-- 2 plaatjes onderaan -->
     <div class="blog-foto-container">
       <img class="blog-foto" src="../fotos-en-pdf/Technologie foto1.avif" alt="Foto technologie moederboord">
