--- a/profile.html
+++ b/profile.html
@@ -39,7 +39,7 @@
         Vlissingen. Ik woon nog thuis met mijn ouders en mijn zusje. Gelukkig is Vlissingen lekker dichtbij de HZ, want
         ik heb vaak wel moeite
         met het vroeg opstaan. Ik heb op de middelbare school het profiel natuur en gezondheid afgerond. Dat zijn dus de
-        vakken biologie, scheikunde en natuurkunde. Hier een lijstje met mijn persoonlijke karaktereigenschappen:
+        vakken biologie, scheikunde en natuurkunde. Hier een lijstje met mijn persoonlijke karaktereigenschappen:</p>
       <ul>
         <li class="hobbies">Geduldig - Ik vind dat ik goed naar mensen kan luisteren en begrijpen.</li>
         <li class="hobbies">Nieuwsgierig - Als iets me interesseert wil ik er graan meer over weten. </li>
@@ -47,8 +47,7 @@
         <li class="hobbies">Flexibel - Ik ben niet de moeilijkste. Als iemand een afspraak wil verzetten of ergens
           anders wilt afspreken is dat geen probleem.</li>
       </ul>
-      </p>
-      <h3 class="kopje">Meer over mijn leven</h3>
+        <h3 class="kopje">Meer over mijn leven</h3>
       <p class="profiel-text">In mijn vrije tijd vind ik het leuk om te gamen, voetballen of basketballen met vrienden
         en sport te kijken. Ik kijk altijd de F1 highlights en ik volg ook de Champions league en Premier League.
         Hieronder zie je 2 foto's van mijn kat genaamd "Lucky". Hij is nu 9 jaar oud en komt uit
