dashboard geupdate csb, pco en pb afgerond en begonnen aan oop en en IT personality.

--- a/dashboard.html
+++ b/dashboard.html
@@ -41,33 +41,33 @@
         <th>Behaalbare Studiepunten</th>
         <th>Behaalde Studiepunten</th>
       </tr>
-      <tr class="bezig">
+      <tr class="completed">
         <td rowspan="3">Blok 1</td>
         <td>Program- &amp; Career Orientation</td>
         <td>Portfolio website presentation</td>
         <td>2.5 EC</td>
         <td><input type="text" id="pco"></td>
       </tr>
-      <tr class="bezig">
+      <tr class="completed">
         <td>Computer Science Basics</td>
         <td>Written Exam</td>
         <td>5 EC</td>
         <td><input type="text" id="cs"></td>
       </tr>
-      <tr class="bezig">
+      <tr class="completed">
         <td>Programming Basics</td>
         <td>Practical Assignment</td>
         <td>5 EC</td>
         <td><input type="text" id="pb"></td>
       </tr>
-      <tr class="niet-gestart">
+      <tr class="bezig">
         <td rowspan="2">Blok 2</td>
         <td rowspan="2">Object Oriented Programming</td>
         <td>Presentation</td>
         <td>5 EC</td>
         <td><input type="text" id="OOP"></td>
       </tr>
-      <tr class="niet-gestart">
+      <tr class="bezig">
         <td>Written Exam</td>
         <td>5 EC</td>
         <td><input type="text" id="WE"></td>
@@ -112,7 +112,7 @@
         <td>2.5 EC</td>
         <td><input type="text" id="IDPo"></td>
       </tr>
-      <tr class="niet-gestart">
+      <tr class="bezig">
         <td rowspan="2">Heel het jaar</td>
         <td>IT Personality</td>
         <td>Portfolio's</td>
