--- a/dashboard.html
+++ b/dashboard.html
@@ -108,7 +108,7 @@
         <td><input type="text" id="Po"></td>
       </tr>
       <tr class="niet-gestart">
-        <td>IT Development Portfolio</td>
+        <td>IT Development Portfolio.</td>
         <td>2.5 EC</td>
         <td><input type="text" id="IDPo"></td>
       </tr>
