--- a/dashboard.html
+++ b/dashboard.html
@@ -60,14 +60,14 @@
         <td>5 EC</td>
         <td><input type="text" id="pb"></td>
       </tr>
-      <tr class="bezig">
+      <tr class="completed">
         <td rowspan="2">Blok 2</td>
         <td rowspan="2">Object Oriented Programming</td>
         <td>Presentation</td>
         <td>5 EC</td>
         <td><input type="text" id="OOP"></td>
       </tr>
-      <tr class="bezig">
+      <tr class="completed">
         <td>Written Exam</td>
         <td>5 EC</td>
         <td><input type="text" id="WE"></td>
@@ -104,7 +104,7 @@
       </tr>
       <tr class="niet-gestart">
         <td>Portfolio</td>
-        <td>2.5 EC</td>
+        <td>2.5 EC</td> 
         <td><input type="text" id="Po"></td>
       </tr>
       <tr class="niet-gestart">
