--- a/dashboard.html
+++ b/dashboard.html
@@ -79,23 +79,23 @@
         <td>2.5 EC</td>
         <td><input type="text" id="BICB"></td>
       </tr>
-      <tr class="niet-gestart">
+      <tr class="bezig">
         <td rowspan="3">Framework Project 1</td>
         <td>Written Exams</td>
         <td>5 EC</td>
         <td><input type="text" id="FP1"></td>
       </tr>
-      <tr class="niet-gestart">
+      <tr class="bezig">
         <td>Group Presentation</td>
         <td>2.5 EC</td>
         <td><input type="text" id="GP"></td>
       </tr>
-      <tr class="niet-gestart">
+      <tr class="bezig">
         <td>Group Portfolio</td>
         <td>2.5 EC</td>
         <td><input type="text" id="GPo"></td>
       </tr>
-      <tr class="niet-gestart">
+      <tr class="bezig">
         <td rowspan="3">Blok 4</td>
         <td rowspan="3">Framework Project 2</td>
         <td>Presentation</td>
