gestart met BICB

--- a/dashboard.html
+++ b/dashboard.html
@@ -72,7 +72,7 @@
         <td>5 EC</td>
         <td><input type="text" id="WE"></td>
       </tr>
-      <tr class="niet-gestart">
+      <tr class="bezig">
         <td rowspan="4">Blok 3</td>
         <td>Business IT Consultancy Basics</td>
         <td>Individual Assignment</td>
