--- a/dashboard.html
+++ b/dashboard.html
@@ -95,7 +95,7 @@
         <td>2.5 EC</td>
         <td><input type="text" id="GPo"></td>
       </tr>
-      <tr class="bezig">
+      <tr class="niet-gestart">
         <td rowspan="3">Blok 4</td>
         <td rowspan="3">Framework Project 2</td>
         <td>Presentation</td>
