--- a/dashboard.html
+++ b/dashboard.html
@@ -85,7 +85,7 @@
         <td>5 EC</td>
         <td><input type="text" id="FP1"></td>
       </tr>
-      <tr class="bezig">
+      <tr class="completed">
         <td>Group Presentation</td>
         <td>2.5 EC</td>
         <td><input type="text" id="GP"></td>
@@ -95,19 +95,19 @@
         <td>2.5 EC</td>
         <td><input type="text" id="GPo"></td>
       </tr>
-      <tr class="niet-gestart">
+      <tr class="bezig">
         <td rowspan="3">Blok 4</td>
         <td rowspan="3">Framework Project 2</td>
         <td>Presentation</td>
         <td>5 EC</td>
         <td><input type="text" id="FP2"></td>
       </tr>
-      <tr class="niet-gestart">
+      <tr class="bezig">
         <td>Portfolio</td>
         <td>2.5 EC</td> 
         <td><input type="text" id="Po"></td>
       </tr>
-      <tr class="niet-gestart">
+      <tr class="bezig">
         <td>IT Development Portfolio.</td>
         <td>2.5 EC</td>
         <td><input type="text" id="IDPo"></td>
