--- a/dashboard.html
+++ b/dashboard.html
@@ -79,7 +79,7 @@
         <td>2.5 EC</td>
         <td><input type="text" id="BICB"></td>
       </tr>
-      <tr class="bezig">
+      <tr class="gefaald">
         <td rowspan="3">Framework Project 1</td>
         <td>Written Exams</td>
         <td>5 EC</td>
@@ -103,7 +103,7 @@
         <td><input type="text" id="FP2"></td>
       </tr>
       <tr class="bezig">
-        <td>Portfolio</td>
+        <td>Individual featues</td>
         <td>2.5 EC</td> 
         <td><input type="text" id="Po"></td>
       </tr>
