--- a/dashboard.html
+++ b/dashboard.html
@@ -90,7 +90,7 @@
         <td>2.5 EC</td>
         <td><input type="text" id="GP"></td>
       </tr>
-      <tr class="bezig">
+      <tr class="completed">
         <td>Group Portfolio</td>
         <td>2.5 EC</td>
         <td><input type="text" id="GPo"></td>
@@ -119,7 +119,7 @@
         <td>2.5 EC</td>
         <td><input type="text" id="IP"></td>
       </tr>
-      <tr class="bezig">
+      <tr class="completed">
         <td>Personal Professional Development: Exploration</td>
         <td>Portfolio</td>
         <td>12.5 EC</td>
